accessibility: 앞부분 및 접근성 도구 부분 번역

--- a/patterns/accessibility.html
+++ b/patterns/accessibility.html
@@ -1,30 +1,52 @@
 ---
 layout: default
-title: Accessibility
+title: 접근성
 ---
-<p>One of Android's missions is to organize the world's information and make it universally accessible and useful. Accessibility is the measure of how successfully a product can be used by people with varying abilities. Our mission applies to all users-including people with disabilities such as visual impairment, color deficiency, hearing loss, and limited dexterity.</p>
+<p>
+안드로이드의 목표 중 하나는 세계의 정보를 체계화하여 누구나 유용하게 사용할 수 있도록 하는 것입니다.
+접근성이라는 것은 한 제품에 대해 얼마나 다양한 사람들이 이용할 수 있는지에 대한 척도입니다.
+우리의 목표는 모든 사용자를 가리키며, 즉 시각 장애나 색맹, 청각 장애를 가졌거나 혹은 조작이 불편한 사람들 역시 그 대상에 포함합니다.
+</p>
 
-<p><a href="https://www.google.com/#hl=en&amp;q=universal+design&amp;fp=1">Universal design</a> is the practice of making products that are inherently accessible to all users, regardless of ability. The Android design patterns were created in accordance with universal design principles, and following them will help your app meet basic usability standards. Adhering to universal design and enabling Android's accessibility tools will make your app as accessible as possible.</p>
+<p>
+<a href="https://www.google.com/#hl=ko&amp;q=%EC%9C%A0%EB%8B%88%EB%B2%84%EC%84%A4+%EB%94%94%EC%9E%90%EC%9D%B8&amp;fp=1">유니버설 디자인</a>(universal design)이라는 것은 제품을 만들 때 사용자의 능력과 관계없이 모두가 접근 가능하도록 하는 것을 의미합니다.
+안드로이드 디자인 패턴은 유니버설 디자인 원칙 하에 만들어졌고, 그 패턴을 따른다면 여러분의 앱은 기본적인 사용성을 가질 것입니다.
+유니버설 디자인을 충실히 지키고 안드로이드 접근성 도구를 사용한다면 사용성을 가능한 최대로 올릴 수 있습니다.
+</p>
 
-<p>Robust support for accessibility will increase your app's user base. It may also be required for adoption by some organizations.</p>
+<p>
+여러분의 앱이 접근성 문제를 탄탄하게 지원하면, 그 앱을 더욱 다양한 사람들이 이용할 수 있습니다.
+또한 어떤 기관에서는 앱을 선정하기 위한 기준이 되기도 합니다.
+</p>
 
-<p><a href="http://www.google.com/accessibility/">Learn more about Google and accessibility.</a></p>
+<p><a href="http://www.google.com/accessibility/">구글과 접근성에 대해 더 자세히 알아보세요.</a></p>
 
 
-<h2 id="tools">Android's Accessibility Tools</h2>
+<h2 id="tools">안드로이드 접근성 도구</h2>
 
-<p>Android includes several features that support access for users with visual impairments; they don't require drastic visual changes to your app.</p>
+<p>
+안드로이드는 시각 장애를 가진 사용자가 기기를 이용할 수 있는 여러 기능을 제공하며,
+여러분의 앱 모양을 크게 변경해야 할 필요는 없습니다.
+</p>
 
 
 <ul>
 <li>
-<strong><a href="https://play.google.com/store/apps/details?id=com.google.android.marvin.talkback">TalkBack</a></strong> is a pre-installed screen reader service provided by Google. It uses spoken feedback to describe the results of actions such as launching an app, and events such as notifications.</li>
+<strong><a href="https://play.google.com/store/apps/details?id=com.google.android.marvin.talkback">TalkBack</a></strong>은 구글에서 제공하는 스크린 리더 프로그램으로, 기기에 이미 설치되어 있습니다.
+앱을 실행하거나 알림 이벤트 등이 일어날 때 사용자에게 음성을 통해 상황을 전달합니다.
+</li>
   <li>
-<strong>Explore by Touch</strong> is a system feature that works with TalkBack, allowing you to touch your device's screen and hear what's under your finger via spoken feedback. This feature is helpful to users with low vision.</li>
+<strong>터치로 탐색하기</strong>(explore by touch)는 TalkBack과 연동되는 시스템 기능으로, 기기 화면을 터치하면 터치한 부분에 대한 안내를 음성으로 전달합니다.
+이 기능은 저시력을 가진 사용자에게 유용합니다.
+</li>
   <li>
-<strong>Accessibility settings</strong> let you modify your device's display and sound options, such as increasing the text size, changing the speed at which text is spoken, and more.</li>
+<strong>접근성 설정</strong>은 글자 크기, 문장 읽기 속도 등등의 화면/소리 설정을 변경합니다.
+</li>
 </ul>
-<p>Some users use hardware or software directional controllers (such as a D-pad, trackball, keyboard) to jump from selection to selection on a screen. They interact with the structure of your app in a linear fashion, similar to 4-way remote control navigation on a television.</p>
+<p>
+일부 사용자는 화면에서 선택지 간을 이동할 때 하드웨어 및 소프트웨어(D-패드, 트랙볼, 키보드 등)로 조작합니다.
+이 경우 여러분의 앱을 TV 방향키 조작하듯 선형 구조로 사용하게 됩니다.
+</p>
 
 
 <h2 id="tools">Guidelines</h2>
