widgets: 확인 목록 번역

--- a/patterns/widgets.html
+++ b/patterns/widgets.html
@@ -230,11 +230,14 @@ Once setup, there typically is not a lot of reason to revisit the setup.
 </div>
 
 
-<h3>Checklist</h3>
+<h3>확인 목록</h3>
 
 <ul>
-<li>Focus on small portions of glanceable information on your widget. Expand on the information in your app.</li>
-  <li>Choose the right widget type for your purpose.</li>
-  <li>For resizable widgets, plan how the content for your widget should adapt to different sizes.</li>
-  <li>Make your widget orientation and device independent by ensuring that the layout is capable of stretching and contracting.</li>
+<li>
+위젯에서는 휙 넘겨볼 정도의 정보에만 집중하세요.
+추가 정보를 표시하는 건 앱의 몫입니다.
+</li>
+  <li>목적에 맞는 위젯 종류를 선택하세요.</li>
+  <li>위젯 크기를 조절할 수 있는 경우, 위젯 컨텐츠가 다양한 크기에서 어떻게 적응해야 하는지 계획을 세우세요.</li>
+  <li>위젯 레이아웃이 늘어나거나 줄어드는 것에 대비할 수 있도록 하여, 화면 방향이나 기기와 무관하게 동작할 수 있도록 만드세요.</li>
 </ul>
