widgets: html 오타 수정

--- a/patterns/widgets.html
+++ b/patterns/widgets.html
@@ -109,7 +109,7 @@ title: 위젯
 <p>
 위의 인터랙션 제약으로 인해, 사용 불가능한 제스처를 이용하는 UI 구성 요소들 역시 사용할 수 없습니다.
 사용 가능한 구성 요소 및 레이아웃 제한에 대해서는
-<a href="http://developer.android.com/guide/topics/appwidgets/index.html">App Widgets</a>API 가이드</p>(영어)의
+<a href="http://developer.android.com/guide/topics/appwidgets/index.html">App Widgets</a> API 가이드(영어)의
 "Creating App Widget Layouts" 부분을 참고해주세요.
 </p>
 
