patterns/new-4-0: 갱신된 레이아웃에 맞춤
html 레이아웃은
86bba7795e967a1bb93eb7061bb3d5f68ae9126a 커밋의
patterns/new.html 기준.

갱신된 사이트에서는 patterns/new.html 페이지를 통해
4.0과 4.1의 변경점을 모두 다루는데,
일단 현재 4.0 번역된 부분만 갱신함

--- a/patterns/new-4-0.html
+++ b/patterns/new-4-0.html
@@ -1,21 +1,22 @@
 ---
 layout: default
-title: 안드로이드 4.0의 새로운 점
+title: 안드로이드의 새로운 점
 ---
-<div class="layout-content-row">
-  <div class="layout-content-col span-7">
+<h2>Ice Cream Sandwich - Android 4.0</h2>
+
 
 <h4>내비게이션 바</h4>
+
+<div class="layout-content-row">
+  <div class="layout-content-col span-7">
 <p>
 안드로이드 4.0에서는 폰에 전통적인 하드웨어 키가 있어야 할 필요가 없습니다.
 그 대신 가상 키를 통해 뒤로 가기, 홈, 최근 앱 버튼 내비게이션을 제공하죠.
 안드로이드 4.0에서 기존 폰의 하드웨어 버튼과 메뉴 키를 사용하는 안드로이드 3.0 이전 앱을 어떻게 다루는지
 <a href="compatibility.html">호환성</a> 문서에서 알아보세요.
 </p>
-
   </div>
   <div class="layout-content-col span-6">
-
     <img src="../media/whats_new_nav_bar.png">
 </div>
 </div>
@@ -24,18 +25,16 @@ title: 안드로이드 4.0의 새로운 점
 <div class="vspace size-2">&#160;</div>
 
 
+<h4>액션 바</h4>
+
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
-
-<h4>액션 바</h4>
 <p>
 액션 바는 안드로이드 앱 구조에서 가장 중요한 요소입니다.
 액션 바를 통해 플랫폼 일관적인 조작을 할 수 있고, 앱의 액션을 다룰 수도 있습니다.
 </p>
-
   </div>
   <div class="layout-content-col span-6">
-
     <img src="../media/whats_new_action_bar.png">
 </div>
 </div>
@@ -44,17 +43,15 @@ title: 안드로이드 4.0의 새로운 점
 <div class="vspace size-2">&#160;</div>
 
 
+<h4>다중 창 레이아웃</h4>
+
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
-
-<h4>다중 창 레이아웃</h4>
 <p>안드로이드 세계에서 다양한 폼 팩터와 스크린 크기를 잘 다루는 앱을 만드는 것은 중요합니다.
     다중 창 레이아웃은 작은 단말기에서는 작게 나뉘어 보이는 서로 다른 액티비티를 결합하여
     타블렛에서는 다채로운 복합 뷰로 표현 할 수 있습니다.</p>
-
   </div>
   <div class="layout-content-col span-6">
-
     <img src="../media/whats_new_multipanel.png">
 </div>
 </div>
@@ -63,17 +60,16 @@ title: 안드로이드 4.0의 새로운 점
 <div class="vspace size-2">&#160;</div>
 
 
+<h4>선택</h4>
+
+
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
-
-<h4>선택</h4>
 <p>롱 프레스 동작은 지금까지 객체마다 컨텍스트 액션을 보여주었습니다.
     이제는 데이터 선택에 사용합니다.
     데이터를 선택할 때 컨텍스트 액션 바(contextual action bar)에서 액션을 조작할 수 있습니다.</p>
-
   </div>
   <div class="layout-content-col span-6">
-
     <img src="../media/whats_new_multiselect.png">
 </div>
 </div>
