patterns/new: notifications 부분 번역

--- a/patterns/new.html
+++ b/patterns/new.html
@@ -5,18 +5,21 @@ title: 안드로이드의 새로운 점
 <h2>Jelly Bean - Android 4.1</h2>
 
 
-<h4>Notifications</h4>
+<h4>알림</h4>
 
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
-    <p>Notifications have received some notable enhancements in Android 4.1:</p>
+    <p>안드로이드 4.1의 알림에는 몇 가지 중요한 기능 향상이 이루어졌습니다.</p>
     <ul>
-<li>Users can act on notifications immediately from the drawer</li>
-      <li>Notifications are more flexible in size and layout</li>
-      <li>A priority flag helps sort notifications by importance</li>
-      <li>Notifications can be collapsed and expanded</li>
+<li>사용자가 알림 창에서 바로 동작을 수행할 수 있습니다.</li>
+      <li>알림의 크기와 레이아웃에 대해 더 많은 유연성을 가집니다.</li>
+      <li>우선 순위 플래그를 통해 알림을 중요도에 따라 정렬할 수 있도록 돕습니다.</li>
+      <li>알림을 접고 펼 수 있습니다.</li>
     </ul>
-<p>The base notification layout has not changed, so app notifications designed for versions earlier than Jelly Bean still look and work the same. Check the updated <a href="notifications.html">Notifications</a> page for more details.</p>
+<p>
+기본적인 알림 레이아웃은 바뀌지 않았기 때문에,
+Jelly Bean 이전에 디자인된 앱 알림 역시 이전과 똑같이 보이고 동작합니다.
+자세한 내용은 <a href="notifications.html">알림</a> 문서에서 갱신된 부분을 참고하세요.</p>
   </div>
   <div class="layout-content-col span-6">
     <img src="../media/new_notifications.png">
