--- a/patterns/accessibility.html
+++ b/patterns/accessibility.html
@@ -49,25 +49,25 @@ title: 접근성
 </p>
 
 
-<h2 id="tools">Guidelines</h2>
+<h2 id="tools">가이드라인</h2>
 
 <p>The Android design principle "I should always know where I am" is key for accessibility concerns. As a user navigates through an application, they need feedback and a mental model of where they are. All users benefit from a strong sense of information hierarchy and an architecture that makes sense. Most users benefit from visual and haptic feedback during their navigation (such as labels, colors, icons, touch feedback) Low vision users benefit from explicit verbal descriptions and large visuals with high contrast.</p>
 
 <p>As you design your app, think about the labels and notations needed to navigate your app by sound. When using Explore by Touch, the user enables an invisible but audible layer of structure in your application. Like any other aspect of app design, this structure can be simple, elegant, and robust. The following are Android's recommended guidelines to enable effective navigation for all users.</p>
 
 
-<h4>Make navigation intuitive</h4>
+<h4>내비게이션을 직관적으로 만드세요</h4>
 
 <p>Design well-defined, clear task flows with minimal navigation steps, especially for major user tasks. Make sure those tasks are navigable via focus controls. </p>
 
 
-<h4>Use recommended touch target sizes</h4>
+<h4>권장 터치 크기를 사용하세요</h4>
 
 <p>48 dp is the recommended touch target size for on screen elements. Read about <a href="../style/metrics-grids.html">Android Metrics and Grids</a> to learn about implementation strategies to help most of your users. For certain users, it may be appropriate to use larger touch targets. An example of this is educational apps, where buttons larger than the minimum recommendations are appropriate for children with developing motor skills and people with manual dexterity challenges.</p>
 
 
 
-<h4>Label visual UI elements meaningfully</h4>
+<h4>비주얼 UI 요소에 의미있는 라벨을 붙이세요</h4>
 
 <p>In your wireframes, <a href="http://developer.android.com/guide/topics/ui/accessibility/apps.html#label-ui">label functional UI components</a> that have no visible text. Those components might be buttons, icons, tabs with icons, and icons with state (like stars). Developers can use the <code><a href="http://developer.android.com/guide/topics/ui/accessibility/apps.html#label-ui">contentDescription</a></code> attribute to set the label.</p>
 
@@ -94,7 +94,7 @@ title: 접근성
 </div>
 
 
-<h4>Provide alternatives to affordances that time out</h4>
+<h4>시간 제한이 있는 행동 유도에 대안을 제공하세요</h4>
 
 <p>Your app may have icons or controls that disappear after a certain amount of time. For example, five seconds after starting a video, playback controls may fade from the screen.</p>
 
@@ -102,7 +102,7 @@ title: 접근성
 <p>Due to the way that TalkBack works, those controls are not read out loud unless they are focused on. If they fade out from the screen quickly, your user may not even be aware that they are available. Therefore, make sure that you are not relying on timed out controls for high priority task flows. (This is a good universal design guideline too.) If the controls enable an important function, make sure that the user can turn on the controls again and/or their function is duplicated elsewhere. You can also change the behavior of your app when accessibility services are turned on. Your developer may be able to make sure that timed-out controls won't disappear.</p>
 
 
-<h4>Use standard framework controls or enable TalkBack for custom controls</h4>
+<h4>표준 프레임워크 컨트롤을 사용하거나 커스텀 컨트롤에 TalkBalk을 지원하세요</h4>
 
 <p>Standard Android framework controls work automatically with accessibility services and have ContentDescriptions built in by default.</p>
 
@@ -116,18 +116,18 @@ title: 접근성
 <p>If you use custom controls, Android has the developer tools in place to allow adherence to the above guidelines and provide meaningful descriptions about the UI. Provide adequate notation on your wireframes and direct your developer to the <a href="http://developer.android.com/guide/topics/ui/accessibility/apps.html#custom-views">Custom Views</a> documentation.</p>
 
 
-<h4>Try it out yourself</h4>
+<h4>직접 시험해 보세요</h4>
 
 <p>Turn on the TalkBack service in <strong>Settings &gt; Accessibility</strong> and navigate your application using directional controls or eyes-free navigation.</p>
 
 
-<h2>Checklist</h2>
+<h2>확인 목록</h2>
 
 <ul>
-<li>Make navigation intuitive</li>
-  <li>Use recommended touch target sizes</li>
-  <li>Label visual UI elements meaningfully</li>
-  <li>Provide alternatives to affordances that time out</li>
-  <li>Use standard framework controls or enable TalkBack for custom controls</li>
-  <li>Try it out yourself</li>
+<li>내비게이션을 직관적으로 만드세요</li>
+  <li>권장 터치 크기를 사용하세요</li>
+  <li>비주얼 UI 요소에 의미있는 라벨을 붙이세요</li>
+  <li>시간 제한이 있는 행동 유도에 대안을 제공하세요</li>
+  <li>표준 프레임워크 컨트롤을 사용하거나 커스텀 컨트롤에 TalkBalk을 지원하세요</li>
+  <li>직접 시험해 보세요</li>
 </ul>
