--- a/patterns/accessibility.html
+++ b/patterns/accessibility.html
@@ -51,7 +51,13 @@ title: 접근성
 
 <h2 id="tools">가이드라인</h2>
 
-<p>The Android design principle "I should always know where I am" is key for accessibility concerns. As a user navigates through an application, they need feedback and a mental model of where they are. All users benefit from a strong sense of information hierarchy and an architecture that makes sense. Most users benefit from visual and haptic feedback during their navigation (such as labels, colors, icons, touch feedback) Low vision users benefit from explicit verbal descriptions and large visuals with high contrast.</p>
+<p>
+안드로이드 디자인 원칙 "내가 어디에 있는지 알 수 있어야 한다"는 접근성 문제에 대한 핵심입니다.
+앱을 탐색할 때, 사용자들은 피드백과 자신이 어디에 있는지에 대한 심성 모형을 필요로 합니다.
+모든 사용자들은 정보 체계에 대한 강한 느낌과 이치에 맞는 설계로부터 혜택을 받습니다.
+대부분의 사용자들은 탐색 중 시각적/감각적 피드백(레이블, 색, 아이콘, 터치 피드백 등)으로부터 혜택을 받습니다.
+저시력 사용자들은 명시적인 구두 설명과 커다란 고대비 시각으로부터 도움을 얻습니다.
+</p>
 
 <p>As you design your app, think about the labels and notations needed to navigate your app by sound. When using Explore by Touch, the user enables an invisible but audible layer of structure in your application. Like any other aspect of app design, this structure can be simple, elegant, and robust. The following are Android's recommended guidelines to enable effective navigation for all users.</p>
 
