patterns/accessibility: 문단 하나 더 번역

--- a/patterns/accessibility.html
+++ b/patterns/accessibility.html
@@ -59,7 +59,12 @@ title: 접근성
 저시력 사용자들은 명시적인 구두 설명과 커다란 고대비 시각으로부터 도움을 얻습니다.
 </p>
 
-<p>As you design your app, think about the labels and notations needed to navigate your app by sound. When using Explore by Touch, the user enables an invisible but audible layer of structure in your application. Like any other aspect of app design, this structure can be simple, elegant, and robust. The following are Android's recommended guidelines to enable effective navigation for all users.</p>
+<p>
+앱을 디자인할 때, 여러분의 앱을 소리로 탐색하기 위해 필요한 레이블과 기호에 대해 고려해 주세요.
+그 앱을 터치로 탐색할 때 사용자는 그 앱에서 보이지 않지만 들을 수 있는 구조층을 사용할 수 있게 됩니다.
+앱 디자인의 다른 관점과 비슷하게, 이 구조는 간단하고, 우아하고, 튼튼할 수 있습니다.
+다음은 모든 사용자가 효율적인 탐색을 할 수 있도록 하는 안드로이드 권장 가이드라인입니다.
+</p>
 
 
 <h4>내비게이션을 직관적으로 만드세요</h4>
