style/typography: 원문에 맞추어 갱신
86bba7795e967a1bb93eb7061bb3d5f68ae9126a 커밋 기준

* 그림 일부 변경
* 본문 다운로드 링크 변경

--- a/style/typography.html
+++ b/style/typography.html
@@ -14,8 +14,8 @@ title: 글꼴
 이런 타이포그래피 활용을 위해 아이스크림 샌드위치에서는 로보토(Roboto)라는 이름의 새 글꼴을 소개합니다. 이 글꼴은 UI 요구사항과 고해상도 화면을 위해 특별히 고안되었습니다.
 현재 TextView 프레임워크는 일반, 볼드, 이탤릭, 볼드 이탤릭을 기본으로 지원합니다.</p>
 
-    <img src="../media/typography_alphas.png"><p><a href="https://dl-ssl.google.com/android/design/Roboto_Hinted_20111129.zip">로보토 다운로드</a></p>
-<p><a href="https://dl-ssl.google.com/android/design/Roboto_Specimen_Book_20111129.pdf">견본 문서</a></p>
+    <img src="../media/typography_alphas.png"><p><a href="http://developer.android.com/downloads/design/Roboto_Hinted_20111129.zip">로보토 다운로드</a></p>
+<p><a href="http://developer.android.com/downloads/design/Roboto_Specimen_Book_20111129.pdf">견본 문서</a></p>
 
   </div>
 </div>
