style/color: 원문 갱신
86bba7795e967a1bb93eb7061bb3d5f68ae9126a 커밋 기준

* 그림 변경 (팔레트에 보라색 추가)
* css와 다운로드 링크 변경

--- a/style/color.html
+++ b/style/color.html
@@ -4,9 +4,8 @@ title: 색상
 ---
 <style>
   .color-row {
-    width: 740px;
-    margin-left: 10px !important;
-    margin-right: 10px !important;
+    width: 760px;
+    margin:0;
 
     display: -webkit-box;
     display:    -moz-box;
@@ -121,7 +120,7 @@ title: 색상
 <p>파란색은 안드로이드 색상 팔레트의 표준 강조색입니다.
 필요할 때 보완하여 사용할 수 있게 각각의 색은 어두운 그림자색이 있습니다.</p>
 
-<p><a href="https://dl-ssl.google.com/android/design/Android_Design_Color_Swatches_20120229.zip">견본 다운로드</a></p>
+<p><a href="http://developer.android.com/downloads/design/Android_Design_Color_Swatches_20120229.zip">견본 다운로드</a></p>
 
 
 <img src="../media/color_spectrum.png">
