style/iconography: 원문 갱신
86bba7795e967a1bb93eb7061bb3d5f68ae9126a 커밋 기준

* 그림 일부 변경
* 다운로드 링크 변경

--- a/style/iconography.html
+++ b/style/iconography.html
@@ -106,7 +106,7 @@ title: 아이콘
 
 <p>
 
-<a href="https://dl-ssl.google.com/android/design/Android_Design_Icons_20120229.zip">액션 바 아이콘 패키지 내려받기</a>
+<a href="http://developer.android.com/downloads/design/Android_Design_Icons_20120229.zip">액션 바 아이콘 패키지 내려받기</a>
 
 </p>
 
